--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "node on gcp",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"No test specified\"",
-    "start": "node server.js"
+    "dev": "webpack --config=Scripts/config/webpack.dev.js --watch",
+    "build": "webpack --config=Scripts/config/webpack.prod.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
